--- a/ui/tasklist/client/scripts/index.html
+++ b/ui/tasklist/client/scripts/index.html
@@ -2,7 +2,7 @@
      ng-controller="camLayoutCtrl">
 
   <!-- # filters column -->
-  <section class="column column-left task-filters"
+<!--  <section class="column column-left task-filters"
            ng-controller="camFiltersCtrl">
     <header class="three-cols-layout-cell top">
       <button class="btn btn-link"
@@ -25,7 +25,7 @@
            open-modal="openModal"
            user-can-create-filter="userCanCreateFilter"></div>
     </div>
-  </section>
+  </section>-->
   <!-- / filters column -->
 
 
@@ -33,7 +33,7 @@
 
 
   <!-- # list column -->
-  <section class="column column-center tasks-list"
+<!--  <section class="column column-center tasks-list"
            ng-controller="camListCtrl">
     <header class="three-cols-layout-cell top">
       <view ng-repeat="tasklistHeaderPlugin in tasklistHeaderPlugins"
@@ -55,7 +55,7 @@
       <div cam-tasks
            tasklist-data="tasklistData"></div>
     </div>
-  </section>
+  </section>-->
   <!-- / list column -->
 
 
