--- a/ui/tasklist/client/index.html
+++ b/ui/tasklist/client/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body ng-controller="camTasklistAppCtrl">
- <!-- <div cam-widget-header
+  <div cam-widget-header
        authentication="authentication"
        user-name="userFullName"
        current-app="tasklist"
@@ -64,7 +64,7 @@
         </view>
       </li>
     </ul>
-  </div>-->
+  </div>
 
   <div class="site-wrap">
 
